[project]
name = "ticketgpt-u3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
