[project]
name = "ticketgpt-u3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.workspace]
members = [
    "my-project",
]
